# AoC

./: README.md  aoc23.cabal
app/: Main.hs  Queue.hs  Util.hs
app/Solution/: Cube.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  GearRatio.hs  Scratchcards.hs  Trebuchet.hs
