cabal-version:      3.0
name:               aoc23
version:            0.1.0.0

executable aoc23
    main-is:
      Main.hs
    other-modules:   
      Solution.Cube,
      Solution.Trebuchet,
      Solution.GearRatio,
      Solution.Scratchcards,
      Solution.Day5,
      Solution.Day6,
      Solution.Day7,
      Solution.Day8,
      Solution.Day9,
      Solution.Day10,
      Solution.Day11,
      Solution.Day12,
      Solution.Day13,
      Solution.Day14,
      Solution.Day15,
      Util 
    default-extensions:
      ImportQualifiedPost,
      TupleSections,
      NumericUnderscores
    build-depends:
      base ^>=4.16.4.0,
      text ^>=2.0.2,
      split ^>=0.2.4,
      MissingH ^>=1.6.0.1,
      extra ^>=1.7.4,
      reverse-list ^>=0.3.0.0,
      contiguous,
      pretty-simple,
      containers 
    hs-source-dirs:   app
    default-language: Haskell2010
